Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122241

QXmlStreamWriter::writeCharacters fails to write UTF-8 encoded QAnyStringView

    XMLWordPrintable

Details

    • Windows
    • c25541e9a (dev), 94c62e322 (dev), 6bef40cb8 (6.7), bdb713b1b (6.7), 47dd5b7ae (tqtc/lts-6.5)

    Description

      Calling QXmlStreamWriter::writeCharacters with an UTF-8 encoded string (as a QAnyStringView) parameter fails, while the UTF-16 representation (as a QString) succeeds.

       

      To replicate the problem, compile and run attached program. The expected output in the label shown is "0 0", but the label shows "0 1" (an error on the second call to QXmlStreamWriter::writeCharacters).

      Attachments

        For Gerrit Dashboard: QTBUG-122241
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            ev E Visser
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There is 1 open Gerrit change